2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>

	* gtksourceview/gtksourcecontextengine.c:
	* tests/test-widget.c:
	
	Fixed string format warnings
	
2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletion.h:
	Remove gtk_source_completion_finish_completion.

2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>

	* gtksourceview/gtksourceview-marshal.list:
	* gtksourceview/gtksourcecompletionitem.c:
	* gtksourceview/gtksourcecompletionitem.h:
	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletioninfo.c:
	* gtksourceview/gtksourcecompletionproposal.c:
	* gtksourceview/gtksourcecompletionutils.c:
	* gtksourceview/gtksourcecompletionproposal.h:
	* gtksourceview/gtksourcecompletionutils.h:
	* gtksourceview/Makefile.am:
	* tests/gsc-provider-test.c:
	
	Made proposal into interface and GtkSourceCompletionItem a default
	store implementation of GtkSourceCompletionProposal.
	
	Cleaned up utils
	
2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletion.h:
	* tests/completion-simple.c:
	Renamed register/unregister to add/remove.

2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletion.h:
	* gtksourceview/gtksourcecompletiontrigger.c:
	* gtksourceview/gtksourcecompletiontrigger.h:
	* gtksourceview/gtksourcecompletiontriggerkey.c:
	* tests/completion-simple.c:
	Remove set_active func on completion.
	Remove deactivate trigger func and added activate signal.

2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gtksourceview/gtksourcecompletion.c:
	* gtksourceview/gtksourcecompletion.h:
	* gtksourceview/gtksourcecompletionproposal.c:
	* gtksourceview/gtksourcecompletionproposal.h:
	Fixed some doc warnings.

2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
