@@ -1,5 +1,12 @@
 2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>
 
+	* gtksourceview/gtksourcecompletiontriggerkey.h:
+	* gtksourceview/gtksourcecompletiontriggerkey.c:
+	
+	Cleanup code and change set_keys to set_accelerator
+	
+2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>
+
 	* gtksourceview/gtksourcecontextengine.c:
 	* tests/test-widget.c:
 	
